generator client {
  provider        = "prisma-client"
  output          = "../src/generated"
  previewFeatures = ["fullTextSearchPostgres"]
}

datasource db {
  provider = "postgresql"
}

generator dbml {
  provider            = "prisma-dbml-generator"
  projectDatabaseType = "PostgreSQL"
}

model User {
  id                  Int       @id @default(autoincrement())
  email               String    @unique
  password            String
  referral_code       String
  referred_by_code    String?
  is_verified         Boolean   @default(false)
  is_disabled         Boolean   @default(false)
  streamline          Int?      @unique
  turnover            Float     @default(0)
  team_turnover       Float     @default(0)
  point               Float     @default(0)
  membership_due_date DateTime?
  commission_earned   Float     @default(0)
  commission_balance  Float     @default(0)
  wallet_address      String?
  direct_count        Int       @default(0)
  indirect_count      Int       @default(0)

  // Relations
  profile UserProfile?
  tokens  Token[]
  payments Payment[]
  earnedCommissions Commission[] @relation("EarnedCommissions")
  customerCommissions Commission[] @relation("CustomerCommissions")

  poolId Int?
  pool   Pool? @relation(fields: [poolId], references: [id])

  packageId Int?
  package   Package? @relation(fields: [packageId], references: [id])

  @@map("users")
}

model UserProfile {
  id            Int      @id @default(autoincrement())
  first_name    String
  last_name     String
  date_of_birth DateTime
  gender        String?
  country       String?
  image String?
  userId        Int      @unique
  user          User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("user_profiles")
}

enum TokenType {
  VERIFICATION
  PASSWORD_RESET
}

enum PaymentStatus {
  PENDING
  COMPLETED
  FAILED
  CANCELLED
  REFUNDED
}

enum PaymentProvider {
  COINPAYMENT
}

enum PaymentItemType {
  PACKAGE_PURCHASE
  PACKAGE_UPGRADE
  REGISTRATION_FEE
  ANNUAL_FEE
}

enum CommissionStatus {
  NOT_ELIGIBLE
  ELIGIBLE
  COMPLETED
}

enum CommissionType {
  affiliate
  unstoppable
}

model Token {
  id         Int       @id @default(autoincrement())
  token      String    @unique
  type       TokenType
  expires_at DateTime
  userId     Int
  user       User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("tokens")
}

model Pool {
  id                   Int    @id @default(autoincrement())
  name                 String
  min_direct_members   Int
  min_turnover         Int
  min_team_turnover    Int
  balance              Float  @default(0)
  revenue              Float  @default(0)
  max_turnover_per_leg Int

  // Back relation
  users User[]

  @@map("pools")
}

model Package {
  id          Int    @id @default(autoincrement())
  slug        String @unique
  name        String
  description String?
  price       Float

  // Back relation
  users User[]

  @@map("packages")
}

model Payment {
  id                Int             @id @default(autoincrement())
  userId            Int
  user              User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  amount            Float
  provider          PaymentProvider @default(COINPAYMENT)
  status            PaymentStatus   @default(PENDING)
  commission_status CommissionStatus @default(NOT_ELIGIBLE)
  provider_reference String?         @unique
  expires_at        DateTime?
  completed_at      DateTime?
  created_at        DateTime        @default(now())
  updated_at        DateTime        @updatedAt

  items             PaymentItem[]
  commissions       Commission[]

  @@map("payments")
}

model PaymentItem {
  id          Int             @id @default(autoincrement())
  paymentId   Int
  payment     Payment         @relation(fields: [paymentId], references: [id], onDelete: Cascade)
  type        PaymentItemType
  name        String
  amount      Float
  referenceId Int?

  @@map("payment_items")
}

model Commission {
  id            Int            @id @default(autoincrement())
  type          CommissionType
  userId        Int
  user          User           @relation("EarnedCommissions", fields: [userId], references: [id])
  customerId   Int
  customer      User           @relation("CustomerCommissions", fields: [customerId], references: [id])
  paymentId    Int
  payment       Payment        @relation(fields: [paymentId], references: [id])
  amount        Float
  position      String
  commission    Float
  percentage    Float
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt

  @@index([type])
  @@index([userId])
  @@index([customerId])
  @@index([paymentId])
  @@index([createdAt])
  @@map("commissions")
}
