//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id Int [pk, increment]
  email String [unique, not null]
  password String [not null]
  referral_code String [not null]
  referred_by_code String
  is_verified Boolean [not null, default: false]
  is_disabled Boolean [not null, default: false]
  streamline Int [unique]
  turnover Float [not null, default: 0]
  team_turnover Float [not null, default: 0]
  point Float [not null, default: 0]
  membership_due_date DateTime
  commission_earned Float [not null, default: 0]
  commission_balance Float [not null, default: 0]
  wallet_address String
  direct_count Int [not null, default: 0]
  indirect_count Int [not null, default: 0]
  profile user_profiles
  tokens tokens [not null]
  payments payments [not null]
  earnedCommissions commissions [not null]
  customerCommissions commissions [not null]
  poolId Int
  pool pools
  packageId Int
  package packages
}

Table user_profiles {
  id Int [pk, increment]
  first_name String [not null]
  last_name String [not null]
  date_of_birth DateTime [not null]
  gender String
  country String
  image String
  userId Int [unique, not null]
  user users [not null]
}

Table tokens {
  id Int [pk, increment]
  token String [unique, not null]
  type TokenType [not null]
  expires_at DateTime [not null]
  userId Int [not null]
  user users [not null]
}

Table pools {
  id Int [pk, increment]
  name String [not null]
  min_direct_members Int [not null]
  min_turnover Int [not null]
  min_team_turnover Int [not null]
  balance Float [not null, default: 0]
  revenue Float [not null, default: 0]
  max_turnover_per_leg Int [not null]
  users users [not null]
}

Table packages {
  id Int [pk, increment]
  slug String [unique, not null]
  name String [not null]
  description String
  price Float [not null]
  users users [not null]
}

Table payments {
  id Int [pk, increment]
  userId Int [not null]
  user users [not null]
  amount Float [not null]
  provider PaymentProvider [not null, default: 'COINPAYMENT']
  status PaymentStatus [not null, default: 'PENDING']
  commission_status CommissionStatus [not null, default: 'NOT_ELIGIBLE']
  provider_reference String [unique]
  expires_at DateTime
  completed_at DateTime
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  items payment_items [not null]
  commissions commissions [not null]
}

Table payment_items {
  id Int [pk, increment]
  paymentId Int [not null]
  payment payments [not null]
  type PaymentItemType [not null]
  name String [not null]
  amount Float [not null]
  referenceId Int
}

Table commissions {
  id Int [pk, increment]
  type CommissionType [not null]
  userId Int [not null]
  user users [not null]
  customerId Int [not null]
  customer users [not null]
  paymentId Int [not null]
  payment payments [not null]
  amount Float [not null]
  position String [not null]
  commission Float [not null]
  percentage Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum TokenType {
  VERIFICATION
  PASSWORD_RESET
}

Enum PaymentStatus {
  PENDING
  COMPLETED
  FAILED
  CANCELLED
  REFUNDED
}

Enum PaymentProvider {
  COINPAYMENT
}

Enum PaymentItemType {
  PACKAGE_PURCHASE
  PACKAGE_UPGRADE
  REGISTRATION_FEE
  ANNUAL_FEE
}

Enum CommissionStatus {
  NOT_ELIGIBLE
  ELIGIBLE
  COMPLETED
}

Enum CommissionType {
  affiliate
  unstoppable
}

Ref: users.poolId > pools.id

Ref: users.packageId > packages.id

Ref: user_profiles.userId - users.id [delete: Cascade]

Ref: tokens.userId > users.id [delete: Cascade]

Ref: payments.userId > users.id [delete: Cascade]

Ref: payment_items.paymentId > payments.id [delete: Cascade]

Ref: commissions.userId > users.id

Ref: commissions.customerId > users.id

Ref: commissions.paymentId > payments.id